# f1-prediction-model

./: .gitignore  README.md  config.py  main.py  pyproject.toml
data/processed/: features.csv
src/: evaluate.py  features.py  fetch.py  predict.py  replay.py  train.py
